kubernetes/apps/default/misc-ingress/app/ingress-external-hass.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: &host "hass.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hass
                port:
                  number: 8123
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: hass
subsets:
  - addresses:
      - ip: "${SECRET_HASS_IP}"
    ports:
      - name: http
        port: 8123
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hass
spec:
  ports:
    - name: http
      port: 8123
  type: ClusterIP
